src/tests/snapshots/niri__tests__window_opening__check_fullscreen_maximize@fsF-tmT-wfsBN-wmAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nwant maximized: AU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized-to-edges true\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Maximized]

post-map configures:
size: 616 × 688, bounds: 1248 × 688, states: []
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
